<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:ads="http://schemas.android.com/apk/res-auto"
       tools:context="com.universal.yt.VideoDetailActivity">

    <com.universal.util.TrackingScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
         <FrameLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:descendantFocusability="blocksDescendants">

           <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    
               <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    				android:layout_width="fill_parent"
    				android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height_youtube"
                        android:background="@color/actionBarColor"
                        android:scaleType="centerCrop"/>
                
                <ImageButton
        			android:id="@+id/playbutton"
        			android:background="@android:color/transparent"
        			android:src="@drawable/play_button"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:contentDescription="@string/play_button" 
        			android:layout_centerHorizontal="true"
        			android:layout_centerVertical="true"/>
                
                </RelativeLayout>

                <LinearLayout 
              			android:id="@+id/content"
              			android:orientation="vertical"
             			android:layout_width="match_parent"
              			android:layout_height="wrap_content"
              			android:paddingBottom="@dimen/activity_vertical_margin">

    			<!-- description -->
     			<TextView
        			android:id="@+id/youtubedescription"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:fontFamily="sans-serif-light" 
        			style="@style/youtube_desc_item"
        			android:paddingTop="70dp"
        			android:autoLink="all"
        			android:linksClickable="true"
        			android:text="@string/empty_textview" />
     			
     			<com.google.android.gms.ads.AdView 
          				android:id="@+id/adView"
         				android:layout_width="fill_parent"
          				android:layout_height="wrap_content"
          				ads:adUnitId="@string/ad_id"
          				android:layout_marginTop="10dp"
          				android:visibility="@string/ad_visibility"
          				ads:adSize="SMART_BANNER"/> 

   			 	<!-- date -->
    			<LinearLayout
        			android:layout_width="match_parent"
        			android:paddingTop="5dp"
        			style="@style/youtube_desc_item"
        			android:layout_height="wrap_content" >
        
     				<TextView
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:textStyle="bold"
        				android:text="@string/textview_date" />
     
    				<TextView
       					android:id="@+id/youtubeurl"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/empty_textview" />
    
    			</LinearLayout>
    
    		<View
        		android:layout_width="fill_parent"
        		android:layout_height="1dp"
        		android:layout_marginTop="10dp"
        		android:background="@android:color/darker_gray" />
    
    		<!-- buttons -->
    	   <LinearLayout
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content" >
    
   				<Button
       				android:id="@+id/openbutton"
       				style="@style/CardActionButton"
       				android:layout_width="wrap_content"
       				android:layout_height="wrap_content"
       				android:layout_marginRight="10dp"
       				android:background="@android:color/transparent"
       				android:text="@string/open_button" />

   
  	 			<Button
        			android:id="@+id/favoritebutton"
        			style="@style/CardActionButton"
        			android:background="@android:color/transparent"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_marginRight="10dp"
        			android:text="@string/favorite_button" />
 
      		</LinearLayout>
			</LinearLayout>
            </LinearLayout>

            <!-- Should have a margin top equal to R.id.image's height -->
            <TextView
                    android:id="@+id/youtubetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
              		android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/image_height_youtube"
                    android:background="@drawable/rectangle"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="Scroll down"/>
        </FrameLayout>

      </com.universal.util.TrackingScrollView>

</merge>