<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:ads="http://schemas.android.com/apk/res-auto"
       tools:context="com.universal.wordpress.WordpressDetailActivity">

    <com.universal.util.TrackingScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <FrameLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content">

           <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height_wordpress"
                        android:background="@color/actionBarColor"
                        android:scaleType="centerCrop"/>
                
                 <LinearLayout 
              			android:id="@+id/contentholder"
              			android:orientation="vertical"
             			android:layout_width="match_parent"
              			android:layout_height="wrap_content">

                	<LinearLayout 
              				android:id="@+id/content"
              				android:orientation="vertical"
             				android:layout_width="match_parent"
              				android:layout_height="wrap_content"
              				android:paddingLeft="@dimen/activity_horizontal_margin"
              				android:paddingRight="@dimen/activity_horizontal_margin">
              				
                	      <TextView
        					android:layout_width="wrap_content"
       						android:layout_height="wrap_content"
        					android:textAppearance="?android:attr/textAppearanceLarge" 
        					android:id="@+id/title" 
        					android:paddingTop="20dp"
        					android:paddingBottom="10dp"
        					android:fontFamily="sans-serif-condensed"/>

                   		 <ProgressBar
                    			android:id="@+id/progressBar"
                    			style="?android:attr/progressBarStyleLarge"
                    			android:paddingTop="20dp"
                    			android:layout_width="fill_parent"
                    			android:layout_height="fill_parent" />
                    
    					  <WebView 
    				       			android:id="@+id/context"
    				        		android:visibility="gone"
    				        		android:layout_width="match_parent"
              						android:layout_height="wrap_content"/>
    				
    				</LinearLayout>
    				
    				<com.google.android.gms.ads.AdView 
          					android:id="@+id/adView"
         					android:layout_width="fill_parent"
          					android:layout_height="wrap_content"
          					android:layout_marginTop="10dp"
          					ads:adUnitId="@string/ad_id"
          					android:visibility="@string/ad_visibility"
          					ads:adSize="SMART_BANNER"/> 
    				
    				<View
        					android:layout_width="fill_parent"
        					android:layout_height="1dp"
        					android:layout_marginTop="10dp"
        					android:background="@android:color/darker_gray" />
    				
    			    <Button
        					android:id="@+id/favoritebutton"
        					style="@style/CardActionButton"
        					android:background="@android:color/transparent"
        					android:layout_width="wrap_content"
        					android:layout_height="wrap_content"
        					android:layout_marginRight="10dp"
        					android:text="@string/favorite_button" />

					</LinearLayout>
            </LinearLayout>

        </FrameLayout>

    </com.universal.util.TrackingScrollView>

</merge>